fixed text sizing issues on mobile

--- a/app/assets/styles/components/dropdown-menu.scss
+++ b/app/assets/styles/components/dropdown-menu.scss
@@ -24,8 +24,7 @@
             gap: 5px;
             align-items: center;
             padding: 5px 10px;
-            min-width: 400px;
-            width: fit-content;
+            width: 325px;
             overflow: hidden;
             clip-path: inset(0 0 0 0);
 
@@ -87,8 +86,7 @@
                 position: absolute;
                 flex-direction: column;
                 display: flex;
-                width: fit-content;
-                min-width: 400px;
+                width: 325px;
                 top: 65px;
                 z-index: 100;
     
@@ -104,10 +102,13 @@
                     align-items: center;
                     gap: 5px;
                     padding: 5px 10px;
+                    text-wrap: nowrap;
 
                     & .price {
                         font-size: 0.75rem;
                         opacity: 0.75;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
     
                     &::after {
