--- a/app/assets/styles/components/metadata.scss
+++ b/app/assets/styles/components/metadata.scss
@@ -18,6 +18,11 @@
                 display: flex;
                 gap: 20px;
                 align-items: baseline;
+
+                @media (max-width: 500px) {
+                    flex-direction: column;
+                    gap: 10px;
+                }
             }
 
             & .id {
@@ -81,6 +86,8 @@
                 left: 10%;
                 padding: 40px;
                 border-radius: 20px;
+                overflow: hidden;
+                overflow-y: scroll;
 
                 & .miscellaneous {
                     display: flex;
@@ -125,42 +132,6 @@
                     }
                 }
             }
-        }
-    }
-}
-
-@media print {
-    .metadata {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-
-        & .general {
-            display: flex;
-            flex-direction: column;
-            gap: 1pt;
-
-            & .title {
-                display: flex;
-                gap: 10px;
-                align-items: baseline;
-            }
-
-            & .id {
-                opacity: 0.5;
-            }
-
-            & button {
-                display: none;
-            }
-        }
-
-        & .options {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
         }
     }
 }
